# odoo-app-security-harness

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
commands/: odoo-code-review.md
docs/: deepsec-review.md  security-harness-benchmark.md
odoo_security_harness/: __init__.py  access_control.py  access_override_scanner.py  action_url_scanner.py  action_window_scanner.py  analyzer.py  api_key_scanner.py  attachment_scanner.py  automation_scanner.py  base_scanner.py  binary_download_scanner.py  button_action_scanner.py  cache_header_scanner.py  config_parameter_scanner.py  constraint_scanner.py  controller_response_scanner.py  data_integrity_scanner.py  database_scanner.py  default_value_scanner.py  deployment_scanner.py  export_scanner.py  field_security_scanner.py  file_upload_scanner.py  finding_schema.py  identity_mutation_scanner.py  integration_scanner.py  json_route_scanner.py  mail_alias_scanner.py  mail_chatter_scanner.py  mail_template_scanner.py  manifest_scanner.py  metadata_scanner.py  migration_scanner.py  model_method_scanner.py  model_scanner.py  module_lifecycle_scanner.py  multi_company.py  oauth_scanner.py  orm_context_scanner.py  orm_domain_scanner.py  (+31 more)
odoo_security_harness/scripts/: __init__.py  _skill_script.py  odoo_deep_scan.py  odoo_review_coverage.py  odoo_review_diff.py  odoo_review_export.py  odoo_review_finalize.py  odoo_review_learn.py  odoo_review_rerun.py  odoo_review_run.py  odoo_review_runtime.py  odoo_review_stock_diff.py  validate_config.py
skills/odoo-code-review/: SKILL.md
skills/odoo-code-review/references/: accepted-risks.example.yml  accepted-risks.md  agent-prompts.md  automated-scans.md  config.example.toml  cwe-map.json  discourse.md  findings-schema.md  fix-list.example.yml  fix-list.md  fp-check.md  html-report.md  insecure-defaults.md  lang-odoo.md  lang-python.md  lang-qweb.md  requirements-mode.md  scope.example.yml  sharp-edges.md  triage.md  weekly-workflow.md  workflow.md
skills/odoo-code-review/rules/: odoo.yml
skills/odoo-code-review/scripts/: odoo-deep-scan  odoo-review-coverage  odoo-review-diff  odoo-review-export  odoo-review-finalize  odoo-review-learn  odoo-review-rerun  odoo-review-run  odoo-review-runtime  odoo-review-stock-diff  odoo-review-validate-config
skills/odoo-code-review/templates/: deep-scan-github-action.yml  github-action.yml
skills/odoo-codereview/: SKILL.md
skills/odoo-codereview/references/: agent-prompts.md  automated-scans.md  lang-java.md  lang-systems.md  lang-web.md  triage.md  variant-analysis.md  workflow.md
skills/odoo-codereview/scripts/: odoo-review-run
tests/: README.md  conftest.py  test_access_control.py  test_access_override_scanner.py  test_action_url_scanner.py  test_action_window_scanner.py  test_analyzer.py  test_api_key_scanner.py  test_attachment_scanner.py  test_automation_scanner.py  test_base_scanner.py  test_binary_download_scanner.py  test_button_action_scanner.py  test_cache_header_scanner.py  test_config_parameter_scanner.py  test_config_validation.py  test_constraint_scanner.py  test_controller_response_scanner.py  test_coverage.py  test_data_integrity_scanner.py  test_database_scanner.py  test_deep_scan.py  test_default_value_scanner.py  test_deployment_scanner.py  test_diff.py  test_export.py  test_export_scanner.py  test_field_security_scanner.py  test_file_upload_scanner.py  test_finding_schema.py  test_identity_mutation_scanner.py  test_init.py  test_integration_scanner.py  test_json_route_scanner.py  test_mail_alias_scanner.py  test_mail_chatter_scanner.py  test_mail_template_scanner.py  test_manifest_parser.py  test_manifest_scanner.py  test_metadata_scanner.py  (+43 more)
tests/fixtures/: sample_manifest.py
